--- a/back/package.json
+++ b/back/package.json
@@ -5,14 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node generateData.js && nodemon babel-node index.js"
   },
   "author": "deonggu",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "axios-rate-limit": "^1.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.5",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.23.5",
+    "nodemon": "^3.0.1"
+  }
 }
