데이터 생성 로직 제거 후 데이터 직접 요청 로직

--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node generateData.js && nodemon babel-node index.js"
+    "start": "nodemon babel-node index.js"
   },
   "author": "deonggu",
   "license": "ISC",
